# iniparserpp

./: CMakeLists.txt  README.md
cmake/: iniconfigConfig.cmake.in
include/: iniConfig.hpp
src/: CMakeLists.txt  iniConfig.cpp
tests/: CMakeLists.txt  test_comments.ini  test_iniconfig.cpp  test_malformed.ini  test_valid.ini
